<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sujanshrestha.unkcoeapp.add">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:text="@string/add_record"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_above="@+id/TableAdd"/>


        <TableLayout
            android:id="@+id/TableAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:text="@string/serial_num"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/Computer_Serial_Num"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text|textAutoComplete"
                    android:layout_column="2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_weight=".7"
                    android:text="@string/computername"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Computer_ID"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textCapCharacters"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:text="@string/user"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/User"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:layout_column="2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:text="@string/admin_username"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/Admin_UserName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:layout_column="2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:text="@string/admin_password"
                    android:textAlignment="center"
                    android:layout_column="1"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/Admin_Password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName|textPassword"
                    android:layout_column="2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:layout_column="1"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/Location"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text|textAutoComplete"
                    android:layout_column="2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:text="@string/computer_type"
                    android:textAlignment="center"
                    android:layout_column="1"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/Computer_Type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text|textAutoComplete"
                    android:layout_column="2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:text="@string/status"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/Status"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text|textAutoComplete"
                    android:layout_column="2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:text="@string/devices"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/Device"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text|textAutoComplete"
                    android:layout_column="2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/TableAdd"
    android:paddingTop="25dp"
    android:layout_centerHorizontal="true">
    <Button
        android:id="@+id/done2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@color/colorPrimary"
        android:onClick="onClickDone"
        android:textSize="20dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:onClick="onClickBack"
        android:textStyle="bold"
      />
</LinearLayout>
</RelativeLayout>
