<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homePage_layout"
    tools:context="com.example.sujanshrestha.unkcoeapp.homePage">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight=".5"
            android:text="@string/unk_coe_inventory_database"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="34sp"
            android:textStyle="bold" />

    <TableLayout
        android:id = "@+id/tableHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_weight=".5"
                android:elevation="9dp"
                android:text="@string/add"
                android:textSize="24sp"
                android:onClick="onClickAdd"/>

        </LinearLayout>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="30dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <Button
                android:id="@+id/report"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_weight=".5"
                android:elevation="9dp"
                android:text="@string/report"
                android:textSize="24sp"
                android:onClick="onClickView"/>
        </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:layout_weight=".5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".5">

                <Button
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:elevation="8dp"
                    android:text="@string/info"
                    android:textSize="24sp"
                    android:onClick="onClickInfo"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>
