<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sujanshrestha.unkcoeapp.MainActivity">



        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            app:srcCompat="@drawable/background"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/relativeLayout"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="118dp">

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/passWord"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:width="250dp"
                android:ems="10"
                android:textSize="20dp"
                android:hint="@string/username"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:width="250dp"
                android:ems="10"
                android:textSize="20dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:onClick="onClickLogIn"
                android:text="@string/log_in"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="230dp" />

        </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>


